--- a/BackEnd_laravel_TechStore/composer.json
+++ b/BackEnd_laravel_TechStore/composer.json
@@ -8,11 +8,12 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.0",
+        "laravel/passport": "^13.0",
         "laravel/sanctum": "^4.1",
         "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.10.1",
-        "phpmailer/phpmailer": "^6.10",
-        "openai-php/client": "^0.13.0"
+        "openai-php/client": "^0.13.0",
+        "phpmailer/phpmailer": "^6.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
