--- a/BackEnd_laravel_TechStore/.env.example
+++ b/BackEnd_laravel_TechStore/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
-APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+# APP_NAME=Laravel
+# APP_ENV=local
+# APP_KEY=
+# APP_DEBUG=true
+# APP_URL=http://localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -63,3 +63,15 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+APP_NAME=Laravel
+APP_ENV=production
+APP_KEY=base64:NNJ9JE3E71QgXAOk+vOql1xvRvZwAy66182/F25DKc8=
+APP_DEBUG=true
+APP_URL=https://backendlaraveltechstore-production.up.railway.app
+DB_CONNECTION=mysql
+DB_HOST=tramway.proxy.rlwy.net
+DB_PORT=23324
+DB_DATABASE=railway
+DB_USERNAME=root
+DB_PASSWORD=pNhcthxIGWjhMOTstNdxzZEmJjhVfUqn
