add Dockerfile for Render deploy

--- a/BackEnd_laravel_TechStore/Dockerfile
+++ b/BackEnd_laravel_TechStore/Dockerfile
@@ -1,46 +1,20 @@
 FROM php:8.2-fpm
 
-# Set working directory
-WORKDIR /var/www
-
-# Install dependencies
 RUN apt-get update && apt-get install -y \
-    build-essential \
-    libpng-dev \
-    libjpeg-dev \
-    libonig-dev \
-    libxml2-dev \
-    zip \
-    unzip \
-    curl \
-    git \
-    libzip-dev \
-    libpq-dev \
-    libcurl4-openssl-dev \
-    libssl-dev \
-    libmcrypt-dev \
-    default-mysql-client \
-    && docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip
+    git unzip curl libzip-dev libpng-dev libonig-dev libxml2-dev zip \
+    && docker-php-ext-install pdo pdo_mysql zip exif pcntl
 
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-# Copy source code
-COPY . /var/www
+WORKDIR /var/www
 
-# Set permissions
-RUN chown -R www-data:www-data /var/www \
-    && chmod -R 755 /var/www
+COPY . .
 
-# Install Laravel dependencies and run migration
-RUN composer install \
-    && cp .env.example .env \
-    && php artisan key:generate \
-    && php artisan config:cache \
-    && php artisan migrate --force
+RUN composer install --no-dev --optimize-autoloader
 
-# Expose port
+RUN chmod -R 775 storage bootstrap/cache
+
 EXPOSE 8000
 
-# Start Laravel
-CMD php artisan serve --host=0.0.0.0 --port=8000
+CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
