--- a/BackEnd_laravel_TechStore/nixpacks.toml
+++ b/BackEnd_laravel_TechStore/nixpacks.toml
@@ -1,9 +1,9 @@
 [phases.setup]
 nixPkgs = [
-  "php82", 
-  "composer", 
-  "php82Extensions.pdo_mysql", 
+  "php82",
+  "php82Packages.composer", 
   "php82Extensions.mbstring", 
+  "php82Extensions.pdo_mysql", 
   "php82Extensions.zip"
 ]
 
