--- a/BackEnd_laravel_TechStore/Dockerfile
+++ b/BackEnd_laravel_TechStore/Dockerfile
@@ -19,8 +19,6 @@ RUN apt-get update && apt-get install -y \
     libssl-dev \
     gnupg \
     ca-certificates \
-    nodejs \
-    npm \
     nginx
 
 # Install PHP extensions
@@ -29,31 +27,31 @@ RUN docker-php-ext-install pdo pdo_mysql mbstring zip exif pcntl bcmath gd
 # ✅ Install Composer
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer
 
-# ✅ Install Node.js & npm (v16 LTS) — đúng cách
+# ✅ Install Node.js & npm (v16 LTS)
 RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - && \
     apt-get install -y nodejs
 
-# Copy source code
+# Copy application files
 COPY . /app
 
-# ✅ Laravel install dependencies
+# ✅ Laravel: install backend dependencies
 RUN composer install --no-interaction --prefer-dist --optimize-autoloader --ignore-platform-reqs
 
-# ✅ Build frontend (Vite / React)
+# ✅ Frontend: install & build (for Vite or React frontend)
 RUN npm install && npm run build
 
-# ✅ Set permissions (nếu dùng Laravel storage/logs/cache)
-RUN chown -R www-data:www-data /app \
-    && chmod -R 775 /app/storage /app/bootstrap/cache
+# ✅ Set Laravel file permissions
+RUN chown -R www-data:www-data /app && \
+    chmod -R 775 /app/storage /app/bootstrap/cache
 
-# ✅ Generate app key, config cache & migrate database
+# ✅ Laravel commands: generate key, cache config, run migrate
 RUN php artisan key:generate && \
     php artisan config:cache && \
     php artisan route:cache && \
     php artisan migrate --force
 
-# Expose port
+# Expose port 9000 for php-fpm
 EXPOSE 9000
 
-# Start PHP-FPM
+# Start php-fpm
 CMD ["php-fpm"]
