--- a/BackEnd_laravel_TechStore/Dockerfile
+++ b/BackEnd_laravel_TechStore/Dockerfile
@@ -1,57 +1,31 @@
 FROM php:8.2-fpm
 
-# Set working directory
 WORKDIR /app
 
-# Install system dependencies
 RUN apt-get update && apt-get install -y \
-    git \
-    curl \
-    zip \
-    unzip \
-    libzip-dev \
-    libpng-dev \
-    libjpeg-dev \
-    libonig-dev \
-    libxml2-dev \
-    libpq-dev \
-    libcurl4-openssl-dev \
-    libssl-dev \
-    gnupg \
-    ca-certificates \
-    nginx
+    git curl zip unzip \
+    libzip-dev libpng-dev libjpeg-dev libonig-dev libxml2-dev \
+    libpq-dev libcurl4-openssl-dev libssl-dev \
+    gnupg ca-certificates
 
-# Install PHP extensions
 RUN docker-php-ext-install pdo pdo_mysql mbstring zip exif pcntl bcmath gd
 
-# ✅ Install Composer
+# Install Composer
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer
 
-# ✅ Install Node.js & npm (v16 LTS)
-RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - && \
+# ✅ Install Node.js + npm (v16)
+RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash -s -- && \
     apt-get install -y nodejs
 
-# Copy application files
 COPY . /app
 
-# ✅ Laravel: install backend dependencies
 RUN composer install --no-interaction --prefer-dist --optimize-autoloader --ignore-platform-reqs
 
-# ✅ Frontend: install & build (for Vite or React frontend)
 RUN npm install && npm run build
 
-# ✅ Set Laravel file permissions
-RUN chown -R www-data:www-data /app && \
-    chmod -R 775 /app/storage /app/bootstrap/cache
+RUN chown -R www-data:www-data /app && chmod -R 775 /app/storage /app/bootstrap/cache
 
-# ✅ Laravel commands: generate key, cache config, run migrate
-RUN php artisan key:generate && \
-    php artisan config:cache && \
-    php artisan route:cache && \
-    php artisan migrate --force
+RUN php artisan key:generate && php artisan config:cache && php artisan route:cache && php artisan migrate --force
 
-# Expose port 9000 for php-fpm
 EXPOSE 9000
-
-# Start php-fpm
 CMD ["php-fpm"]
