--- a/BackEnd_laravel_TechStore/Dockerfile
+++ b/BackEnd_laravel_TechStore/Dockerfile
@@ -1,31 +1,53 @@
+# ✅ Base image for PHP
 FROM php:8.2-fpm
 
+# ✅ Set working directory
 WORKDIR /app
 
+# ✅ Install system dependencies & Node.js + npm
 RUN apt-get update && apt-get install -y \
-    git curl zip unzip \
-    libzip-dev libpng-dev libjpeg-dev libonig-dev libxml2-dev \
-    libpq-dev libcurl4-openssl-dev libssl-dev \
-    gnupg ca-certificates
+    git \
+    curl \
+    zip \
+    unzip \
+    libzip-dev \
+    libpng-dev \
+    libjpeg-dev \
+    libonig-dev \
+    libxml2-dev \
+    libpq-dev \
+    libcurl4-openssl-dev \
+    libssl-dev \
+    gnupg \
+    ca-certificates \
+    nodejs \
+    npm
 
+# ✅ Install PHP extensions
 RUN docker-php-ext-install pdo pdo_mysql mbstring zip exif pcntl bcmath gd
 
-# Install Composer
+# ✅ Install Composer
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer
 
-# ✅ Install Node.js + npm (v16)
-RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash -s -- && \
-    apt-get install -y nodejs
-
+# ✅ Copy source code
 COPY . /app
 
+# ✅ Install Laravel backend dependencies
 RUN composer install --no-interaction --prefer-dist --optimize-autoloader --ignore-platform-reqs
 
+# ✅ Install and build frontend (Vite / React)
 RUN npm install && npm run build
 
-RUN chown -R www-data:www-data /app && chmod -R 775 /app/storage /app/bootstrap/cache
+# ✅ Laravel setup: permissions, env, key, cache, migrate
+RUN chown -R www-data:www-data /app \
+    && chmod -R 775 /app/storage /app/bootstrap/cache \
+    && php artisan key:generate \
+    && php artisan config:cache \
+    && php artisan route:cache \
+    && php artisan migrate --force
 
-RUN php artisan key:generate && php artisan config:cache && php artisan route:cache && php artisan migrate --force
-
+# ✅ Expose port
 EXPOSE 9000
+
+# ✅ Start PHP-FPM
 CMD ["php-fpm"]
