Fix: Add composer to Dockerfile

--- a/BackEnd_laravel_TechStore/Dockerfile
+++ b/BackEnd_laravel_TechStore/Dockerfile
@@ -1,10 +1,9 @@
-# ✅ Base image for PHP
 FROM php:8.2-fpm
 
-# ✅ Set working directory
+# Set working directory
 WORKDIR /app
 
-# ✅ Install system dependencies & Node.js + npm
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
     git \
     curl \
@@ -19,35 +18,40 @@ RUN apt-get update && apt-get install -y \
     libcurl4-openssl-dev \
     libssl-dev \
     gnupg \
-    ca-certificates \
-    nodejs \
-    npm
+    ca-certificates
 
-# ✅ Install PHP extensions
+# ✅ Install Node.js & npm (v16 LTS) — Cách đúng
+RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - && \
+    apt-get install -y nodejs
+
+# ✅ Kiểm tra lại npm đã có
+RUN node -v && npm -v
+
+# Install PHP extensions
 RUN docker-php-ext-install pdo pdo_mysql mbstring zip exif pcntl bcmath gd
 
 # ✅ Install Composer
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer
 
-# ✅ Copy source code
+# Copy source code
 COPY . /app
 
-# ✅ Install Laravel backend dependencies
+# ✅ Laravel install dependencies
 RUN composer install --no-interaction --prefer-dist --optimize-autoloader --ignore-platform-reqs
 
-# ✅ Install and build frontend (Vite / React)
+# ✅ Build frontend (Vite / React)
 RUN npm install && npm run build
 
-# ✅ Laravel setup: permissions, env, key, cache, migrate
+# ✅ Set permissions (Laravel storage/logs/cache)
 RUN chown -R www-data:www-data /app \
-    && chmod -R 775 /app/storage /app/bootstrap/cache \
-    && php artisan key:generate \
-    && php artisan config:cache \
-    && php artisan route:cache \
-    && php artisan migrate --force
+    && chmod -R 775 /app/storage /app/bootstrap/cache
 
-# ✅ Expose port
+# ✅ Laravel setup
+RUN php artisan key:generate && \
+    php artisan config:cache && \
+    php artisan route:cache && \
+    php artisan migrate --force
+
 EXPOSE 9000
 
-# ✅ Start PHP-FPM
 CMD ["php-fpm"]
