--- a/BackEnd_laravel_TechStore/Dockerfile
+++ b/BackEnd_laravel_TechStore/Dockerfile
@@ -20,37 +20,37 @@ RUN apt-get update && apt-get install -y \
     gnupg \
     ca-certificates
 
-# ✅ Install Node.js & npm (v16 LTS) — Cách đúng
+# ✅ Cài Node.js & npm v16 (ổn định với Vite)
 RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - && \
     apt-get install -y nodejs
 
-# ✅ Kiểm tra lại npm đã có
+# ✅ Kiểm tra lại npm đã cài
 RUN node -v && npm -v
 
 # Install PHP extensions
 RUN docker-php-ext-install pdo pdo_mysql mbstring zip exif pcntl bcmath gd
 
-# ✅ Install Composer
+# ✅ Cài Composer
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer
 
 # Copy source code
-COPY . /app
+COPY . .
 
 # ✅ Laravel install dependencies
 RUN composer install --no-interaction --prefer-dist --optimize-autoloader --ignore-platform-reqs
 
-# ✅ Build frontend (Vite / React)
+# ✅ Build frontend assets (nếu có Vite hoặc React)
 RUN npm install && npm run build
-
-# ✅ Set permissions (Laravel storage/logs/cache)
-RUN chown -R www-data:www-data /app \
-    && chmod -R 775 /app/storage /app/bootstrap/cache
 
 # ✅ Laravel setup
 RUN php artisan key:generate && \
     php artisan config:cache && \
     php artisan route:cache && \
     php artisan migrate --force
+
+# ✅ Set permissions (Laravel storage/logs/cache)
+RUN chown -R www-data:www-data /app && \
+    chmod -R 775 /app/storage /app/bootstrap/cache
 
 EXPOSE 9000
 
