--- a/BackEnd_laravel_TechStore/Dockerfile
+++ b/BackEnd_laravel_TechStore/Dockerfile
@@ -20,35 +20,25 @@ RUN apt-get update && apt-get install -y \
     gnupg \
     ca-certificates
 
-# ✅ Cài Node.js & npm v16 (ổn định với Vite)
-RUN curl -fsSL https://deb.nodesource.com/setup_16.x | bash - && \
-    apt-get install -y nodejs
-
-# ✅ Kiểm tra lại npm đã cài
-RUN node -v && npm -v
-
 # Install PHP extensions
 RUN docker-php-ext-install pdo pdo_mysql mbstring zip exif pcntl bcmath gd
 
-# ✅ Cài Composer
+# Cài Composer
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer
 
 # Copy source code
 COPY . .
 
-# ✅ Laravel install dependencies
+# Cài Laravel dependencies
 RUN composer install --no-interaction --prefer-dist --optimize-autoloader --ignore-platform-reqs
 
-# ✅ Build frontend assets (nếu có Vite hoặc React)
-RUN npm install && npm run build
-
-# ✅ Laravel setup
+# Laravel setup
 RUN php artisan key:generate && \
     php artisan config:cache && \
     php artisan route:cache && \
     php artisan migrate --force
 
-# ✅ Set permissions (Laravel storage/logs/cache)
+# Set permissions
 RUN chown -R www-data:www-data /app && \
     chmod -R 775 /app/storage /app/bootstrap/cache
 
