--- a/BackEnd_laravel_TechStore/.env.example
+++ b/BackEnd_laravel_TechStore/.env.example
@@ -64,11 +64,23 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+# APP_NAME=Laravel
+# APP_ENV=production
+# APP_KEY=base64:NNJ9JE3E71QgXAOk+vOql1xvRvZwAy66182/F25DKc8=
+# APP_DEBUG=true
+# APP_URL=https://backendlaraveltechstore-production.up.railway.app
+# DB_CONNECTION=mysql
+# DB_HOST=tramway.proxy.rlwy.net
+# DB_PORT=23324
+# DB_DATABASE=railway
+# DB_USERNAME=root
+# DB_PASSWORD=pNhcthxIGWjhMOTstNdxzZEmJjhVfUqn
+
 APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:NNJ9JE3E71QgXAOk+vOql1xvRvZwAy66182/F25DKc8=
 APP_DEBUG=true
-APP_URL=https://backendlaraveltechstore-production.up.railway.app
+APP_URL=https://techstore.onrender.com
 DB_CONNECTION=mysql
 DB_HOST=tramway.proxy.rlwy.net
 DB_PORT=23324
