--- a/BackEnd_laravel_TechStore/Dockerfile
+++ b/BackEnd_laravel_TechStore/Dockerfile
@@ -23,25 +23,22 @@ RUN apt-get update && apt-get install -y \
 # Install PHP extensions
 RUN docker-php-ext-install pdo pdo_mysql mbstring zip exif pcntl bcmath gd
 
-# Cài Composer
+# Install Composer
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer
 
 # Copy source code
 COPY . .
 
-# Cài Laravel dependencies
+# Install Laravel dependencies
 RUN composer install --no-interaction --prefer-dist --optimize-autoloader --ignore-platform-reqs
-
-# # Laravel setup
-# RUN php artisan key:generate && \
-#     php artisan config:cache && \
-#     php artisan route:cache && \
-#     php artisan migrate --force
 
 # Set permissions
 RUN chown -R www-data:www-data /app && \
     chmod -R 775 /app/storage /app/bootstrap/cache
 
-EXPOSE 9000
+# Expose the port Render will use
+ENV PORT=8080
+EXPOSE 8080
 
-CMD ["php-fpm"]
+# Start Laravel server using artisan
+CMD php artisan serve --host=0.0.0.0 --port=$PORT
