--- a/BackEnd_laravel_TechStore/Dockerfile
+++ b/BackEnd_laravel_TechStore/Dockerfile
@@ -1,39 +1,60 @@
+# FROM php:8.2-fpm
+
+# # Set working directory
+# WORKDIR /var/www
+
+# # Install dependencies
+# RUN apt-get update && apt-get install -y \
+#     build-essential \
+#     libpng-dev \
+#     libjpeg-dev \
+#     libonig-dev \
+#     libxml2-dev \
+#     zip \
+#     unzip \
+#     curl \
+#     git \
+#     libzip-dev \
+#     libpq-dev \
+#     libcurl4-openssl-dev \
+#     libssl-dev \
+#     libmcrypt-dev \
+#     default-mysql-client \
+#     && docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip
+
+# # Install Composer
+# COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
+
+# # Copy existing application directory
+# COPY . /var/www
+
+# # Set permissions
+# RUN chown -R www-data:www-data /var/www \
+#     && chmod -R 755 /var/www
+
+# # Expose port
+# EXPOSE 8000
+
+# # Start Laravel
+# CMD php artisan serve --host=0.0.0.0 --port=8000
+
 FROM php:8.2-fpm
 
-# Set working directory
 WORKDIR /var/www
 
-# Install dependencies
 RUN apt-get update && apt-get install -y \
-    build-essential \
-    libpng-dev \
-    libjpeg-dev \
-    libonig-dev \
-    libxml2-dev \
-    zip \
-    unzip \
-    curl \
-    git \
-    libzip-dev \
-    libpq-dev \
-    libcurl4-openssl-dev \
-    libssl-dev \
-    libmcrypt-dev \
-    default-mysql-client \
+    libpng-dev libjpeg-dev libfreetype6-dev zip unzip git \
+    libonig-dev libxml2-dev libzip-dev \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd zip
 
-# Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
-# Copy existing application directory
 COPY . /var/www
 
-# Set permissions
-RUN chown -R www-data:www-data /var/www \
-    && chmod -R 755 /var/www
+RUN chown -R www-data:www-data /var/www && chmod -R 755 /var/www
 
-# Expose port
 EXPOSE 8000
 
-# Start Laravel
 CMD php artisan serve --host=0.0.0.0 --port=8000
+
